--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <!-- Categories -->
     <div class="category">
-        <h2 class="category-header">Traditional Art</h2>
+        <h2 class="category-header">UTD Bookstore</h2>
         <div class="category-content">
             <div class="portfolio-item">
                 <img src="Dart.jpg" alt="image1" class="portfolio-image">
@@ -176,7 +176,7 @@
     </div>
 
     <div class="category">
-        <h2 class="category-header">Digital Art</h2>
+        <h2 class="category-header">Indego Magazine</h2>
         <div class="category-content">
             <div class="portfolio-item">
                 <img src="Shrimpy.png" alt="image7" class="portfolio-image">
@@ -196,7 +196,7 @@
     </div>
 
     <div class="category">
-        <h2 class="category-header">Competition Art</h2>
+        <h2 class="category-header">Cheerleading</h2>
         <div class="category-content">
             <div class="portfolio-item">
                 <img src="Temoc.png" alt="image16" class="portfolio-image">
@@ -208,6 +208,85 @@
         </div>
     </div>
 
+     <div class="category">
+        <h2 class="category-header">Fashion Show</h2>
+        <div class="category-content">
+            <div class="portfolio-item">
+                <img src="Shrimpy.png" alt="image7" class="portfolio-image">
+                <div class="content">
+                    <h2>Isolated</h2>
+                    <p>(digital) This was classwork for Showing the abilities of Emphasis and Focal Point.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="figure&ground.jpg" alt="image8" class="portfolio-image">
+                <div class="content">
+                    <h2>Hypnosis</h2>
+                    <p>(digital) This was classwork for Showing the abilities of Figure and Ground.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+     <div class="category">
+        <h2 class="category-header">My 18th Birthday</h2>
+        <div class="category-content">
+            <div class="portfolio-item">
+                <img src="Shrimpy.png" alt="image7" class="portfolio-image">
+                <div class="content">
+                    <h2>Isolated</h2>
+                    <p>(digital) This was classwork for Showing the abilities of Emphasis and Focal Point.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="figure&ground.jpg" alt="image8" class="portfolio-image">
+                <div class="content">
+                    <h2>Hypnosis</h2>
+                    <p>(digital) This was classwork for Showing the abilities of Figure and Ground.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+     <div class="category">
+        <h2 class="category-header">Arizona</h2>
+        <div class="category-content">
+            <div class="portfolio-item">
+                <img src="Shrimpy.png" alt="image7" class="portfolio-image">
+                <div class="content">
+                    <h2>Isolated</h2>
+                    <p>(digital) This was classwork for Showing the abilities of Emphasis and Focal Point.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="figure&ground.jpg" alt="image8" class="portfolio-image">
+                <div class="content">
+                    <h2>Hypnosis</h2>
+                    <p>(digital) This was classwork for Showing the abilities of Figure and Ground.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+     <div class="category">
+        <h2 class="category-header">UTD Bookstore</h2>
+        <div class="category-content">
+            <div class="portfolio-item">
+                <img src="Shrimpy.png" alt="image7" class="portfolio-image">
+                <div class="content">
+                    <h2>Isolated</h2>
+                    <p>(digital) This was classwork for Showing the abilities of Emphasis and Focal Point.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="figure&ground.jpg" alt="image8" class="portfolio-image">
+                <div class="content">
+                    <h2>Hypnosis</h2>
+                    <p>(digital) This was classwork for Showing the abilities of Figure and Ground.</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Popup Modal -->
     <div class="image-popup-overlay" id="popupOverlay">
         <div class="image-popup">
