--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <h2 class="category-header">UTD Bookstore</h2>
         <div class="category-content">
             <div class="portfolio-item">
-                <img src="Dart.jpg" alt="image1" class="portfolio-image">
+                <img src="BOOKSTORE01.jpg" alt="bookstore" class="portfolio-image">
                 <div class="content">
                     <h2>Dart art competition</h2>
                     <p>(color pencil) This art piece was for the dart art contest 2024 where I got honorable mentions.</p>
