--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
             <div class="portfolio-item">
                 <img src="BOOKSTORE01.jpg" alt="bookstore" class="portfolio-image">
                 <div class="content">
-                    <h2>Dart art competition</h2>
-                    <p>(color pencil) This art piece was for the dart art contest 2024 where I got honorable mentions.</p>
+                    <h2>BOOKSTORE01</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
             <div class="portfolio-item">
