--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="category-content">
             <div class="portfolio-item">
                 <img src="BOOKSTORE01.jpg" alt="bookstore" class="portfolio-image">
-                <div class="content">
+                <div class="bookstore">
                     <h2>BOOKSTORE01</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
