--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <h2 class="category-header">UTD Bookstore</h2>
         <div class="category-content">
             <div class="portfolio-item">
-                <img src="BOOKSTORE01.jpg" alt="bookstore" class="portfolio-image">
+                <img src="BOOKSTORE01.jpg" alt="image1" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE01</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
