--- a/index.html
+++ b/index.html
@@ -166,12 +166,34 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="STATEVASE.jpg" alt="image2" class="portfolio-image">
-                <div class="content">
-                    <h2>Blue Hope</h2>
-                    <p>(clay) This art piece was made for the high school vase art competition 2024 where I got to the state competition.</p>
+                <img src="bookstore/BOOKSTORE/BOOKSTORE02.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE02</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
+            <div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE03.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE03</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE04.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE04</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
         </div>
     </div>
 
