--- a/index.html
+++ b/index.html
@@ -186,12 +186,48 @@
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
-
-
-
-
-
-
+            <div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE05.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE05</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE06.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE06</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE07.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE07</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE08.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE08</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE09.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE09</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE10.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE10</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
 
 
         </div>
