--- a/index.html
+++ b/index.html
@@ -228,6 +228,58 @@
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
+            <div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE11.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE11</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE12.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE12</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE13.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE13</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE14.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE14</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE15.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
         </div>
