--- a/index.html
+++ b/index.html
@@ -263,25 +263,155 @@
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE16.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE17.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE18.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE19.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE20.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE21.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE22.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE23.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE24.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE25.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE26.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+                <img src="bookstore/BOOKSTORE/BOOKSTORE27.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+                <img src="bookstore/BOOKSTORE/BOOKSTORE28.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+                <img src="bookstore/BOOKSTORE/BOOKSTORE29.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+                <img src="bookstore/BOOKSTORE/BOOKSTORE30.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+                <img src="bookstore/BOOKSTORE/BOOKSTORE31.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+                <img src="bookstore/BOOKSTORE/BOOKSTORE32.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+                <img src="bookstore/BOOKSTORE/BOOKSTORE33.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+                <img src="bookstore/BOOKSTORE/BOOKSTORE34.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+                <img src="bookstore/BOOKSTORE/BOOKSTORE35.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+                <img src="bookstore/BOOKSTORE/BOOKSTORE36.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+                <img src="bookstore/BOOKSTORE/BOOKSTORE37.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+                <img src="bookstore/BOOKSTORE/BOOKSTORE38.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE15</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
         </div>
     </div>
 
