--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
         }
 
         .portfolio-item img {
-            width: 100%;
-            height: auto;
+            width: 100%; /* Ensure the image fits the portfolio item */
+            max-height: 150px; /* Limit the height of the image */
+            object-fit: cover; /* Crop the image if necessary to fit */
             cursor: pointer;
         }
 
