--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             border: 1px solid #ddd;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            max-width: 300px;
+            max-width: 200px; /* Set a smaller width for the portfolio item */
             text-align: center;
             overflow: hidden;
             position: relative;
