--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
             </div>
         </div>
     </div>
-
+</div>
     <div class="category">
         <h2 class="category-header">Indego Magazine</h2>
         <div class="category-content">
