--- a/index.html
+++ b/index.html
@@ -272,118 +272,118 @@
                 </div>
             </div>
 <div class="portfolio-item">
-                <img src="bookstore/BOOKSTORE/BOOKSTORE17.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE17.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE17</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
 <div class="portfolio-item">
-                <img src="bookstore/BOOKSTORE/BOOKSTORE18.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE18.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE18</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
 <div class="portfolio-item">
-                <img src="bookstore/BOOKSTORE/BOOKSTORE19.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE19.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE19</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
 <div class="portfolio-item">
-                <img src="bookstore/BOOKSTORE/BOOKSTORE20.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE20.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE20</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
 <div class="portfolio-item">
-                <img src="bookstore/BOOKSTORE/BOOKSTORE21.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE21.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE21</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
 <div class="portfolio-item">
-                <img src="bookstore/BOOKSTORE/BOOKSTORE22.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE22.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE22</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
 <div class="portfolio-item">
-                <img src="bookstore/BOOKSTORE/BOOKSTORE23.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE23.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE23</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
 <div class="portfolio-item">
-                <img src="bookstore/BOOKSTORE/BOOKSTORE24.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE24.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE24</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
 <div class="portfolio-item">
-                <img src="bookstore/BOOKSTORE/BOOKSTORE25.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE25.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE25</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
 <div class="portfolio-item">
-                <img src="bookstore/BOOKSTORE/BOOKSTORE26.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE26.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE26</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
-                <img src="bookstore/BOOKSTORE/BOOKSTORE27.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE27.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE27</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
-                <img src="bookstore/BOOKSTORE/BOOKSTORE28.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE28.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE28</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
-                <img src="bookstore/BOOKSTORE/BOOKSTORE29.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE29.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE29</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
-                <img src="bookstore/BOOKSTORE/BOOKSTORE30.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE30.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE30</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
-                <img src="bookstore/BOOKSTORE/BOOKSTORE31.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE31.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE31</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
-                <img src="bookstore/BOOKSTORE/BOOKSTORE32.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE32.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE32</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
-                <img src="bookstore/BOOKSTORE/BOOKSTORE33.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE33.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE33</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
-                <img src="bookstore/BOOKSTORE/BOOKSTORE34.jpg" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE34.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE34</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
