--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
             border: 1px solid #ddd;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            max-width: 200px; /* Set a smaller width for the portfolio item */
+            max-width: 200px;
             text-align: center;
             overflow: hidden;
             position: relative;
         }
 
         .portfolio-item img {
-            width: 100%; /* Ensure the image fits the portfolio item */
-            max-height: 150px; /* Limit the height of the image */
-            object-fit: cover; /* Crop the image if necessary to fit */
+            width: 100%;
+            max-height: 150px;
+            object-fit: cover;
             cursor: pointer;
         }
 
@@ -99,7 +99,6 @@
             justify-content: center;
             align-items: center;
             z-index: 10;
-            overflow-y: auto;
         }
 
         .image-popup-overlay.active {
@@ -113,9 +112,11 @@
         }
 
         .image-popup img {
-            width: 100%;
+            width: auto;
             height: auto;
-            object-fit: contain;
+            max-width: 100%; /* Scale the image to fit the screen width */
+            max-height: 100vh; /* Scale the image to fit the screen height */
+            object-fit: contain; /* Maintain aspect ratio */
         }
 
         .close-btn {
