--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="category-content">
             <div class="portfolio-item">
                 <img src="bookstore/BOOKSTORE/BOOKSTORE01.jpg" alt="bookstore" class="portfolio-image">
-                <div class="UTD Bookstore">
+                <div class="bookstore">
                     <h2>BOOKSTORE01</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
