--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grouped Artwork Portfolio</title>
-    <style>
+  <style>
         /* General Styles */
         body {
             font-family: Arial, sans-serif;
@@ -114,8 +114,8 @@
         .image-popup img {
             width: auto;
             height: auto;
-            max-width: 100%; /* Scale the image to fit the screen width */
-            max-height: 100vh; /* Scale the image to fit the screen height */
+            max-width: 100%; /* Fit the image within the screen width */
+            max-height: 100vh; /* Fit the image within the screen height */
             object-fit: contain; /* Maintain aspect ratio */
         }
 
