--- a/index.html
+++ b/index.html
@@ -335,6 +335,13 @@
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE26.JPG" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE26</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>            
 
         </div>
     </div>
