--- a/index.html
+++ b/index.html
@@ -342,6 +342,25 @@
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>            
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE27.JPG" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE27</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE28.JPG" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE28</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+
+
+
+
+
 
         </div>
     </div>
