--- a/index.html
+++ b/index.html
@@ -356,8 +356,20 @@
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
-
-
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE29.JPG" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE29</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE30.JPG" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE30</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
 
 
 
