--- a/index.html
+++ b/index.html
@@ -370,10 +370,62 @@
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
-
-
-
-
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE31.JPG" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE31</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE32.JPG" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE32</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE33.JPG" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE33</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE34.JPG" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE34</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE25.JPG" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE35</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE26.JPG" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE36</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE37.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE37</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE38.jpg" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE38</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
