--- a/index.html
+++ b/index.html
@@ -300,9 +300,20 @@
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
                 </div>
             </div>
-
-            
-            
+<div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE21.JPG" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE21</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE22.JPG" alt="bookstore" class="portfolio-image">
+                <div class="bookstore">
+                    <h2>BOOKSTORE22</h2>
+                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                </div>
+            </div>
 <div class="portfolio-item">
                 <img src="bookstore/BOOKSTORE/BOOKSTORE23.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
