--- a/index.html
+++ b/index.html
@@ -416,14 +416,14 @@
                 <img src="bookstore/BOOKSTORE/BOOKSTORE37.jpg" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE37</h2>
-                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                    <p>modeling a T-shirt for the utdallas bookstore</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="bookstore/BOOKSTORE/BOOKSTORE38.jpg" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE38</h2>
-                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                    <p>modeling a T-shirt for the utdallas bookstore</p>
                 </div>
             </div>
         </div>
