--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                 </div>
             </div>
 <div class="portfolio-item">
-                <img src="bookstore/BOOKSTORE/BOOKSTORE35.JPG" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE35.jpg" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE35</h2>
                     <p>modeling a sweatshirt for the utdallas bookstore</p>
