--- a/index.html
+++ b/index.html
@@ -403,14 +403,14 @@
                 <img src="bookstore/BOOKSTORE/BOOKSTORE35.jpg" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE35</h2>
-                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                    <p>modeling a T-shirt for the utdallas bookstore</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="bookstore/BOOKSTORE/BOOKSTORE36.JPG" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE36</h2>
-                    <p>modeling a sweatshirt for the utdallas bookstore</p>
+                    <p>modeling a T-shirt for the utdallas bookstore</p>
                 </div>
             </div>
 <div class="portfolio-item">
