--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                 </div>
             </div>
 <div class="portfolio-item">
-                <img src="bookstore/BOOKSTORE/BOOKSTORE36.JPG" alt="bookstore" class="portfolio-image">
+                <img src="bookstore/BOOKSTORE/BOOKSTORE36.jpg" alt="bookstore" class="portfolio-image">
                 <div class="bookstore">
                     <h2>BOOKSTORE36</h2>
                     <p>modeling a T-shirt for the utdallas bookstore</p>
