--- a/index.html
+++ b/index.html
@@ -434,17 +434,81 @@
         <h2 class="category-header">Indego Magazine</h2>
         <div class="category-content">
             <div class="portfolio-item">
-                <img src="Shrimpy.png" alt="image7" class="portfolio-image">
+                <img src="indego/INDEGO01.JPG" alt="indego" class="portfolio-image">
                 <div class="content">
-                    <h2>Isolated</h2>
-                    <p>(digital) This was classwork for Showing the abilities of Emphasis and Focal Point.</p>
+                    <h2>INDEGO01</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="figure&ground.jpg" alt="image8" class="portfolio-image">
+                <img src="indego/INDEGO02.JPG" alt="indego" class="portfolio-image">
                 <div class="content">
-                    <h2>Hypnosis</h2>
-                    <p>(digital) This was classwork for Showing the abilities of Figure and Ground.</p>
+                    <h2>INDEGO02</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO03.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO03</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO04.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO04</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO05.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO05</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO06.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO06</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO07.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO07</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO08.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO08</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO09.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO09</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                 </div>
             </div>
         </div>
