--- a/index.html
+++ b/index.html
@@ -494,21 +494,132 @@
                     <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
                 </div>
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            <div class="portfolio-item">
+                <img src="indego/INDEGO10.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO1o</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO11.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO11</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO12.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO12</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO13.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO13</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO14.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO14</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO15.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO15</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO16.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO16</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO17.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO17</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO18.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO18</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO19.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO19</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO20.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO20</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO21.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO21</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO22.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO22</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO23.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO23</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO24.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO24</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO25.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO25</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEG26.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO26</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="indego/INDEGO27.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>INDEGO27</h2>
+                    <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                </div>
+            </div>
                 </div>
             </div>
         </div>
