--- a/index.html
+++ b/index.html
@@ -445,6 +445,8 @@
                 <div class="content">
                     <h2>INDEGO02</h2>
                     <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
+                    </div>
+            </div>
             <div class="portfolio-item">
                 <img src="indego/INDEGO03.JPG" alt="indego" class="portfolio-image">
                 <div class="content">
