--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="indego/INDEGO23.JPG" alt="indego" class="portfolio-image">
+                <img src="indego/INDEGO23.jpg" alt="indego" class="portfolio-image">
                 <div class="content">
                     <h2>INDEGO23</h2>
                     <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
