--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="indego/INDEG26.JPG" alt="indego" class="portfolio-image">
+                <img src="indego/INDEGO26.JPG" alt="indego" class="portfolio-image">
                 <div class="content">
                     <h2>INDEGO26</h2>
                     <p>this was for a photoshoot for indego magazine, pictures mainly edited by me.</p>
