--- a/index.html
+++ b/index.html
@@ -630,13 +630,46 @@
     <div class="category">
         <h2 class="category-header">Cheerleading</h2>
         <div class="category-content">
-            <div class="portfolio-item">
-                <img src="Temoc.png" alt="image16" class="portfolio-image">
+  <div class="portfolio-item">
+                <img src="cheer/CHEER01.JPG" alt="indego" class="portfolio-image">
                 <div class="content">
-                    <h2>Life of Temoc</h2>
-                    <p>(digital) This was for an art competition for the (UTD) university bookstore for the mascot "Temoc"s everyday life.</p>
+                    <h2>CHEER01</h2>
+                    <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
+  <div class="portfolio-item">
+                <img src="cheer/CHEER02.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>CHEER02</h2>
+                    <p>Pictures take of me cheering for the NCL USA Cricket League</p>
+                </div>
+            </div>
+  <div class="portfolio-item">
+                <img src="cheer/CHEER03.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>CHEER03</h2>
+                    <p>Pictures take of me cheering for the NCL USA Cricket League</p>
+                </div>
+            </div>
+  <div class="portfolio-item">
+                <img src="cheer/CHEER04.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>CHEER04</h2>
+                    <p>Pictures take of me cheering for the NCL USA Cricket League</p>
+                </div>
+            </div>
+  <div class="portfolio-item">
+                <img src="cheer/CHEER05.JPG" alt="indego" class="portfolio-image">
+                <div class="content">
+                    <h2>CHEER05</h2>
+                    <p>Pictures take of me cheering for the NCL USA Cricket League</p>
+                </div>
+            </div>
+
+
+
+
+
         </div>
     </div>
 
